process Sonar feedback